Resolves tdf#142651 Writer: Next Change stopped working

by normalizing copy of PaM instead of reference

Change-Id: If2c8664de18eb9473151c5961ad7654932ca37e2